bin/tests/snapshots/bool_comparison__fix_101b3f071d9ef6e1c6cddd4b3d4d2a4f7d4cf2764ff5811ee2d532b3ccb45690.snap
---
source: bin/tests/bool_comparison.rs
expression: "\"f != false\""
---
--- <temp_file_path>
+++ <temp_file_path> [fixed]
@@ -1 +1 @@
-f != false
+f
