bin/tests/snapshots/bool_comparison__fix_a09de9082d480f3e54de569de2789ebfee65a1ecbd31dcbdfc543b8b13e4bda4.snap
---
source: bin/tests/bool_comparison.rs
expression: "\"true != g\""
---
--- <temp_file_path>
+++ <temp_file_path> [fixed]
@@ -1 +1 @@
-true != g
+!g
