bin/tests/snapshots/bool_comparison__fix_a30c834e61da781cbcbc0c95b79ab0a51a81f1fdc5a5d885d778f43d268ed2b3.snap
---
source: bin/tests/bool_comparison.rs
expression: "\"a == true\""
---
--- <temp_file_path>
+++ <temp_file_path> [fixed]
@@ -1 +1 @@
-a == true
+a
