bin/tests/snapshots/bool_comparison__fix_ba56854c55bd3954b56d4e0c3d32b65cd144d55b060637c5ff8085d81bef6c49.snap
---
source: bin/tests/bool_comparison.rs
expression: "\"false == true\""
---
--- <temp_file_path>
+++ <temp_file_path> [fixed]
@@ -1 +1 @@
-false == true
+!true
